fixed to-hit-adj-box from whitespace block layer

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -1419,6 +1419,7 @@ summary::-webkit-details-marker {
 /* ensure rows are above the whitespace block layer */
 .charsheet .weapons-row1 *,
 .charsheet .weapons-row2 *,
+.charsheet .to-hit-adj-box *,
 .charsheet .equipment-columns *,
 .charsheet .special-abilities-columns *,
 .charsheet .special-abilities-columns-row2 *,
